@startuml
skinparam linetype ortho

entity User {
*user_id: BIGINT <<PK>>
--
*username: varchar
*password: varchar
*email: varchar
}

entity Group {
*id: BIGINT <<PK>>
*creator_id: BIGINT <<FK>>
*chat_id: BIGINT <<FK>>
--
description: text
}

entity Group_Member {
    *group_member_id: BIGINT <<PK>>
    *group_id: BIGINT <<FK>>
    *user_id: BIGINT <<FK>>
    *is_admin: boolean
}

entity Chat {
*chat_id: BIGINT<<PK>>
--
*type: enum?
*created_at: TIMESTAMP
}

entity Private_Chat {
    *private_chat_id: BIGINT <<PK>>
    *chat_id: BIGINT <<FK>>
    *user1_id: BIGINT <<FK>> UNIQUE
    *user2_id: BIGINT <<FK>> UNIQUE
}


entity Message {
*message_id: BIGINT <<PK>>
*chat_id: BIGINT <<FK>>
*sender_id: BIGINT <<FK>>
--
*created_at: TIMESTAMP
*message: varchar
}

User ||--o{ Group : Creator
User }|--o{ Group_Member
User ||--o{ Message
Chat ||--o| Private_Chat
Chat ||--o{ Message
Chat ||--o| Group
Group }|--|{ Group_Member

Private_Chat }o--|| User : user1
Private_Chat }o--|| User : user2
@enduml